--- a/arquivo html/index.html
+++ b/arquivo html/index.html
@@ -5,10 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../arquivo css/style.css">
 </head>
 <body>
     <header>
         <h1>Atividade 1</h1>
     </header>
+
+    <div class="first">
+      <p>O goleiro </p>
+    </div>
+    <div class="second">
+      <p>Palmeiras eliminado</p>
+    </div>
+    <div class="third">
+      <p>Santos maior do Brasil</p>
+    </div>
+    <div class="fourth">
+       <p>Guguinha</p>
+    </div>
+
 </body>
 </html>
